# fgv-summer-2025

./: .gitignore  README.md  pyproject.toml
aula01/: 01_raw.py  02_fixed.py  03_prefect.py  04_random_failure.py  05_retries.py  06_dependencies.py  README.md
aula02/: README.md  data_generator.py  gcp.py  main.py
aula03/: .user.yml  README.md  dbt_project.yml  profiles.yml
aula03/models/staging/: __sources.yml  stg_locations.sql  stg_order_items.sql  stg_products.sql
aula03_04/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
aula03_04/data-tests/: assert_sum_monolito_equal_refactoring.sql
aula03_04/macros/: cents_to_dollars.sql  generate_schema_name.sql
aula03_04/models/: orders.sql  orders_monolito.sql  orders_monolito.yml
aula03_04/models/marts/: metricflow_time_spine.yml
aula03_04/models/staging/: __sources.yml  raw_order_items.sql  raw_orders.sql  raw_products.sql  raw_supplies.sql  stg_customers.sql  stg_locations.yml  stg_orders.sql  stg_supplies.sql
src/sandbox_fgv/: __init__.py
