[project]
name = "sandbox-fgv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.1.13",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "google-cloud-storage>=2.19.0",
    "google-cloud-bigquery>=3.29.0",
    "pyarrow>=19.0.0",
    "numpy>=2.2.2",
    "dbt-core>=1.9.2",
    "dbt-bigquery>=1.9.1",
    "recce>=0.51.3",
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
]
